Update 'qokwo0ib5-go' component image to: quay.io/rhtap_qe/rhtap-qe:50ae63cf555f9dba2e786173b86324156453a0a0@sha256:4000d8bd60b206506b468cc80bc380ed69a1495ad437be0d804a35b37dbb9cd8

--- a/components/qokwo0ib5-go/overlays/development/deployment-patch.yaml
+++ b/components/qokwo0ib5-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qokwo0ib5-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:50ae63cf555f9dba2e786173b86324156453a0a0@sha256:4000d8bd60b206506b468cc80bc380ed69a1495ad437be0d804a35b37dbb9cd8
+          name: container-image
